--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "simple-crud-app",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Creativity App Backend",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Chandima Gunasena",
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
